Fixed lower bound valign for integrals
lower bound vertical align is now -.72em

--- a/src/css/mathx.css
+++ b/src/css/mathx.css
@@ -767,7 +767,7 @@
   margin-right: 0.1em;
 }
 .func-sub {
-  vertical-align: -.7em;
+  vertical-align: -.72em;
 }
 .func-sqrt {
   display: inline-block;
